name:                Utmp
version:             0.1.0.0
synopsis:            A library for reading and writing Linux utmp files
license:             MIT
license-file:        LICENSE
author:              Neil Mayhew
maintainer:          neil_mayhew@users.sourceforge.net
copyright:           Neil Mayhew, 2015
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Utmp
  other-extensions:    CPP, ForeignFunctionInterface
  build-depends:       base, network, time, binary, bytestring
  build-tools:         hsc2hs
  default-language:    Haskell2010

executable TestUtmp
  main-is:             TestUtmp.hs
  build-depends:       Utmp, base, network, time, binary, bytestring
  default-language:    Haskell2010

executable CountsByDay
  main-is:             CountsByDay.hs
  build-depends:       Utmp, base, network, time, binary, bytestring
  default-language:    Haskell2010
