name:                Utmp
version:             0.1.0.0
synopsis:            A library for reading and writing Linux utmp files
license:             MIT
license-file:        LICENSE
author:              Neil Mayhew
maintainer:          neil_mayhew@users.sourceforge.net
copyright:           Neil Mayhew, 2015
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag werror
  description:         Use-Werror
  default:             False

library
  exposed-modules:     Utmp
  other-extensions:    CPP, ForeignFunctionInterface
  build-depends:       base, network, time, binary, bytestring, storable-tuple, text, time-locale-compat
  build-tools:         hsc2hs
  default-language:    Haskell2010
  ghc-options:        -Wall -Wcompat
                      -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates
  if flag(werror)
    ghc-options:      -Werror

executable TestUtmp
  main-is:             TestUtmp.hs
  other-extensions:    CPP
  build-depends:       Utmp, base, binary, bytestring
  default-language:    Haskell2010
  ghc-options:        -Wall -Wcompat
                      -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates
  if flag(werror)
    ghc-options:      -Werror

executable CountsByDay
  main-is:             CountsByDay.hs
  build-depends:       Utmp, base, time
  default-language:    Haskell2010
  ghc-options:        -Wall -Wcompat
                      -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates
  if flag(werror)
    ghc-options:      -Werror

executable CountsSince
  main-is:             CountsSince.hs
  other-extensions:    CPP
  build-depends:       Utmp, base, time, time-locale-compat
  default-language:    Haskell2010
  ghc-options:        -Wall -Wcompat
                      -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates
  if flag(werror)
    ghc-options:      -Werror

executable BadLogins
  main-is:             BadLogins.hs
  build-depends:       Utmp, base, time,
                       directory,
                       optparse-applicative
  default-language:    Haskell2010
  ghc-options:        -Wall -Wcompat
                      -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates
  if flag(werror)
    ghc-options:      -Werror
